RESOLVED FIXED283093
REGRESSION (iOS 17.4): Notes pastes text copied from a text document in Safari as raw markup
https://bugs.webkit.org/show_bug.cgi?id=283093
Summary REGRESSION (iOS 17.4): Notes pastes text copied from a text document in Safar...
Wenson Hsieh
Reported 2024-11-13 16:54:49 PST
Attachments
Wenson Hsieh
Comment 1 2024-11-13 21:25:42 PST
EWS
Comment 2 2024-11-13 23:43:49 PST
Committed 286583@main (6c628b3ff9c4): <https://commits.webkit.org/286583@main> Reviewed commits have been landed. Closing PR #36629 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.